--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,3 +6,14 @@
 html {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
 }
+
+body{
+    max-width: 800px;
+    margin: 40px auto;
+    line-height: 1.5;
+}
+
+h1, h2, h3, h4, h5 {
+    margin-bottom: 18px;
+    
+}
